【MOD】修改成自己的风格，增加个人元素。

--- a/layouts/indexes/tag.html
+++ b/layouts/indexes/tag.html
@@ -10,7 +10,7 @@
         <div class="main-inner group">
           <section class="content">
             <div class="page-title pad group">
-              <h1><i class="fa fa-folder-open"></i>Posts with the tag: <span>{{ .Title }}</span></h1>
+              <h1><i class="fa fa-folder-open"></i>ндуб╠Й╪г: <span>{{ .Title }}</span></h1>
             </div>
             <div class="pad group">
 
