--- a/layouts/partials/duoshuo.html
+++ b/layouts/partials/duoshuo.html
@@ -1,7 +1,8 @@
 <section id="comments" class="themeform">
+<!--
 <div class="ds-thread" data-thread-key="{{ .RelPermalink }}" data-title="{{ .Title }}" data-url="{{ .Permalink }}"></div>
 <script type="text/javascript">
-var duoshuoQuery = {short_name:"coderzh"};
+var duoshuoQuery = {short_name:"zhaokaiju"};
 	(function() {
 		var ds = document.createElement('script');
 		ds.type = 'text/javascript';ds.async = true;
@@ -11,4 +12,5 @@ var duoshuoQuery = {short_name:"coderzh"};
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 </script>
+-->
 </section>
