--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -28,9 +28,7 @@
 
                   <p class="post-byline">
                     by {{ .GetParam "author" }} · {{ .Date.Format .Site.Params.DateForm }} · {{ .WordCount }} Words ·
-                    ~{{ .ReadingTime }}min reading time |
-                    <a href="https://github.com/coderzh/coderzh-hugo-blog/blob/master/content/{{ replace .Source.File.Path "\\" "/" }}"
-                       target="_blank">Improve on <i class="fa fa-github"></i></a>
+                    ~{{ .ReadingTime }}min reading time 
                   </p>
 
                   <div class="clear"></div>
@@ -47,13 +45,14 @@
                         <div style="text-align:center;">微信扫一扫交流</div>
                         </div>
                         <div>
-                            <p style="margin-top:0px;">作者：<a target="_blank" href="http://blog.coderzh.com/">CoderZh</a>
-                            <br />微信关注：hacker-thinking （一个程序员的思考）
-                            <br />本文出处：<a target="_blank" href="{{ .Permalink }}">{{ .Permalink }}</a>
+                            <p style="margin-top:0px;">作者：<a target="_blank" href="http://gozkj.com/">有趣</a>
+                            <br />微信关注：zhaokaiju
+                            <br />个人网站：<a target="_blank" href="http://gozkj.com/">http://gozkj.com/</a>
                             <br />
                             文章版权归本人所有，欢迎转载，但未经作者同意必须保留此段声明，且在文章页面明显位置给出原文连接，否则保留追究法律责任的权利。 </p>
                         </div>
                     </div>
+
                     <div class="clear"></div>
                   </div>
                   <!--/.entry-->
@@ -62,17 +61,24 @@
                 <!--/.post-inner-->
               </article>
               <!--/.post-->
+
               <div class="clear"></div>
-              <!--
+
               <p class="post-tags">
                 <span>Tags:</span>
                 {{ range .Params.tags }}
                 <a rel="tag" href="/tags/{{ . | urlize }}">{{ . }}</a>
                 {{ end }}
-              </p>-->
-              <!--{{ partial "relatedPosts.html" . }}-->
-              <!--{{ partial "duoshuo.html" . }}-->
+              </p>
+              <!--
+              {{ partial "relatedPosts.html" . }}
+
+              {{ partial "duoshuo.html" . }}
+              -->
+              <!--/#comments-->
             </div>
+
+
           </section>
           {{ partial "sidebarLeft.html" . }}
           {{ partial "sidebarRight.html" . }}
