--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,9 +9,9 @@
         <div class="main-inner group">
           <section class="content">
             <div class="pad group">
-              {{ range first 1 .Data.Pages }}
-              {{ partial "featured.html" . }}
-              {{end}}
+             	{{ range first 1 .Data.Pages }}
+                {{ partial "featured.html" . }}
+                {{end}}
               <div class="post-list group">
                 {{ range $index,$data := .Data.Pages }}
                 {{ if gt $index 0 }}{{ if ge $data.Date.Year .Now.Year }}
@@ -23,7 +23,7 @@
               </div>
               <nav class="pagination group">
                 <div class="wp-pagenavi">
-                  <a class="page" href="/post/">More...</a>
+                  <a class="page" href="/post/">¸ü¶à...</a>
                 </div>
               </nav>
             </div>
