--- a/layouts/indexes/post.html
+++ b/layouts/indexes/post.html
@@ -10,7 +10,7 @@
         <div class="main-inner group">
           <section class="content">
             <div class="page-title pad group">
-              <h1><i class="fa fa-folder-open"></i>Category: <span>{{ .Title }}</span></h1>
+              <h1><i class="fa fa-folder-open"></i>·ÖÀà: <span>{{ .Title }}</span></h1>
             </div>
             <div class="pad group">
               {{ partial "postListGroup.html" . }}
