--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <div class="nav-text"><!-- put your mobile menu text here --></div>
     <div class="nav-wrap container">
       <a rel="nofollow" href="{{ .Site.BaseURL }}/" class="nav-cs-icon">
-        <img width="40" height="40" src="/public/coderzh.jpg" alt="coderzh" title="Home">
+        <img width="40" height="40" src="/public/zhaokaiju.jpg" alt="zhaokaiju" title="Home">
       </a>
       <ul id="menu-default-menu" class="nav container-inner group">
         <li class="menu-item menu-item-type-post_type menu-item-object-page">
@@ -31,18 +31,19 @@
     </div>
 
     <div class="container">
+       <!-- 去掉搜索
       <div class="container-inner">
         <div class="toggle-search"><i class="fa fa-search"></i></div>
         <div class="search-expand">
           <div class="search-expand-inner">
             <form method="get" class="searchform themeform" action="https://www.google.com/search">
               <div>
-                <input type="text" class="search" name="q" placeholder="Press enter to start searching">
+                <input type="text" class="search" name="q" placeholder="按 enter键 开始搜索">
               </div>
-            </form>
           </div>
         </div>
       </div>
+        -->
       <!--/.container-inner-->
     </div>
     <!--/.container-->
@@ -58,7 +59,7 @@
         <div class="group pad">
           <h1 class="site-title">
             <a rel="nofollow" href="{{ .Site.BaseURL }}/" rel="home">
-              <img style="border-radius: 50%;width:72px;height:72px;margin:0 auto;" alt="coderzh" src="/public/coderzh.jpg"></img>
+              <img style="border-radius: 50%;width:72px;height:72px;margin:0 auto;" alt="zhaokaiju" src="/public/zhaokaiju.jpg"></img>
               {{ .Site.Title }}
             </a>
           </h1>
