--- a/layouts/partials/sidebarLeftCategories.html
+++ b/layouts/partials/sidebarLeftCategories.html
@@ -2,16 +2,18 @@
   <a class="sidebar-toggle" title="Expand Sidebar"><i class="fa icon-sidebar-toggle"></i></a>
   <div class="sidebar-content">
     <div class="sidebar-top group">
-      <p>Follow:</p>
+      <p>¹Ø×¢:</p>
       {{ partial "social-links.html" . }}
     </div>
     {{ partial "wechat.html" . }}
-    <div id="search-2" class="widget widget_search"><h3>Search</h3>
+    <!-- È¥µôËÑË÷
+    <div id="search-2" class="widget widget_search"><h3>ËÑË÷</h3>
       <form method="get" class="searchform themeform" action="https://www.google.com/search">
         <div>
-          <input type="text" class="search" name="q" placeholder="Press enter to start searching">
+          <input type="text" class="search" name="q" placeholder="°´ enter¼ü ¿ªÊ¼ËÑË÷">
         </div>
       </form>
     </div>
+   -->
   </div>
 </div>
