--- a/layouts/partials/sidebarRight.html
+++ b/layouts/partials/sidebarRight.html
@@ -2,9 +2,9 @@
   <a class="sidebar-toggle" title="Expand Sidebar"><i class="fa icon-sidebar-toggle"></i></a>
   <div class="sidebar-content">
     <div class="sidebar-top group">
-      <p>More</p>
+      <p>更多</p>
     </div>
-    <div id="categories-2" class="widget widget_categories"><h3>Categories</h3>
+    <div id="categories-2" class="widget widget_categories"><h3>分类</h3>
       <ul>
         {{ range .Site.Params.Categories }}
           <li class="cat-item cat-item-1">
