--- a/static/wp-content/themes/hueman/style.css
+++ b/static/wp-content/themes/hueman/style.css
@@ -38,7 +38,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 /* ------------------------------------------------------------------------- *
  *  Base Styles
 /* ------------------------------------------------------------------------- */
-body { background: #eaeaea; font-size: 16px; line-height: 1.5em; color: #666; }
+body { background: #eaeaea; font-size: 16px; line-height: 1.5em; color: #666; font-weight: 300; }
 ::selection { background: #3b8dbd; color: #fff; }
 ::-moz-selection { background: #3b8dbd; color: #fff; }
 a { color: #3b8dbd; text-decoration: none; outline: 0; }
@@ -131,7 +131,7 @@ input, textarea, button, select, label { font-family: inherit; }
 .entry ol ul,
 .entry ul ul,
 .entry ul ol { margin-bottom: 0; }
-.entry li { margin-top: 0.1em; }
+.entry li { margin-top: 0.6em; }
 .entry ul li,
 .entry ol ul li { list-style: square; }
 .entry ol li,
@@ -144,13 +144,7 @@ input, textarea, button, select, label { font-family: inherit; }
 .entry blockquote.twitter-tweet:before { content: "\f099"; }
 .entry code, .entry pre { font-family: Hack, monospace; font-size: 14px; }
 .entry pre { /* background: url(img/pre.png) repeat top; padding: 1px 2px; */margin: 10px 0 15px 0; border: 1px solid #ddd; line-height: 19px; white-space: pre-wrap; word-wrap: break-word; overflow-x: auto; overflow-y: hidden; }
-code {     
-    padding: 2px 4px;
-    font-size: 90%;
-    color: #c7254e;
-    background-color: #f9f2f4;
-    border-radius: 4px;
-}
+.entry code { /* background: #eee; */ }
 .entry ins { background: #fff486; }
 .entry sub,
 .entry sup { font-size: 62.5%; }
@@ -241,19 +235,19 @@ box-shadow: 6px 0 0 rgba(0,0,0,0.04), -6px 0 0 rgba(0,0,0,0.04); }
 /* ------------------------------------ */
 
 /* 2 column, content left */
-.col-2cl .main-inner { background: url(img/sidebar/s-right-s1.png) repeat-y right 0; padding-right: 300px; }
-.col-2cl .s1 { float: right; margin-right: -300px; }
+.col-2cl .main-inner { background: url(img/sidebar/s-right-s1.png) repeat-y right 0; padding-right: 340px; }
+.col-2cl .s1 { float: right; margin-right: -340px; }
 .col-2cl .content { float: left; }
 
 /* 2 column, content right */
-.col-2cr .main-inner { background: url(img/sidebar/s-left.png) repeat-y left 0; padding-left: 300px; }
-.col-2cr .s1 { float: left; margin-left: -300px; }
+.col-2cr .main-inner { background: url(img/sidebar/s-left.png) repeat-y left 0; padding-left: 340px; }
+.col-2cr .s1 { float: left; margin-left: -340px; }
 .col-2cr .content { float: right; }
 
 /* 3 column, content middle */
 .col-3cm .main { background: url(img/sidebar/s-right-s2.png) repeat-y right 0; }
-.col-3cm .main-inner { background: url(img/sidebar/s-left.png) repeat-y left 0; background-size: 300px auto; padding-left: 300px; padding-right: 260px; }
-.col-3cm .s1 { float: left; margin-left: -300px; }
+.col-3cm .main-inner { background: url(img/sidebar/s-left.png) repeat-y left 0; padding-left: 340px; padding-right: 260px; }
+.col-3cm .s1 { float: left; margin-left: -340px; }
 .col-3cm .s2 { float: right; margin-right: -260px; /* ingenuity! */ position: relative; right: -100%; }
 .col-3cm .content { float: right; }
 
@@ -296,7 +290,7 @@ box-shadow: inset 0 -1px 0 rgba(255,255,255,0.1); }
 .col-3cr .s2 .icon-sidebar-toggle:before { content: "\f101"; }
 
 /* sidebar primary */
-.s1 { width: 300px; z-index: 2; }
+.s1 { width: 340px; z-index: 2; }
 .s1:hover { z-index: 98; /* social icons tooltip above header nav */ }
 .s1 .sidebar-top,
 .s1 .sidebar-toggle { background: #3b8dbd; }
@@ -521,7 +515,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 box-shadow: -1px 0 0 rgba(255,255,255,0.1); }
 .toggle-search:hover,
 .toggle-search.active { background: rgba(0,0,0,0.15); color: #fff; }
-.search-expand { display: none; background: #26272b; position: absolute; top: 0; right: 0; width: 300px;
+.search-expand { display: none; background: #26272b; position: absolute; top: 0; right: 0; width: 340px;
 -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.1);
 box-shadow: 0 1px 0 rgba(255,255,255,0.1); }
 .search-expand-inner { background: rgba(0,0,0,0.15); padding: 15px; }
@@ -793,6 +787,7 @@ box-shadow: inset -1px 0 1px rgba(0,0,0,0.2); }
 .post-title a:hover { color: #3b8dbd; }
 
 .entry.excerpt { font-size: 16px; }
+.entry.excerpt p { margin-bottom: 0; }
 
 
 /* ------------------------------------------------------------------------- *
